--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,17 +6,20 @@ authors = ["Alexandru Cojocaru <hi@xojoc.pw>"]
 license = "AGPL-3.0-or-later"
 
 [tool.poetry.dependencies]
-python = "^3.9"
-tweepy = "^4.6.0"
-requests = "^2.27.1"
-beautifulsoup4 = "^4.10.0"
-lxml = "^4.8.0"
+python = "^3.11"
+tweepy = "^4"
+requests = "^2"
+beautifulsoup4 = "^4"
+lxml = "^4"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.931"
 flake8 = "^4.0.1"
 black = "^22.1.0"
 types-requests = "^2.27.11"
+
+[tool.poetry.group.dev.dependencies]
+flake8 = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
