--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,13 +13,38 @@ beautifulsoup4 = "^4"
 lxml = "^4"
 
 [tool.poetry.dev-dependencies]
-mypy = "^0.931"
-flake8 = "^4.0.1"
-black = "^22.1.0"
-types-requests = "^2.27.11"
+mypy = "^1"
+black = "^23"
+
+[tool.poetry.group.types.dependencies]
+types-requests = "^2.28.11.17"
+types-beautifulsoup4 = "^4.12.0.3"
+types-lxml = "^2023.3.28"
 
 [tool.poetry.group.dev.dependencies]
-flake8 = "^6.0.0"
+ruff = "^0.0.262"
+
+[tool.ruff]
+select = ['ALL']
+ignore = ['E501',
+          'D', # ignore docs for now
+          'D100', 'D101', 'D102', 'D103', # missing doc strings
+          'G004' # Logging statement uses f-string --> reenable
+          ]
+
+
+line-length = 79
+target-version = 'py311'
+
+[tool.ruff.flake8-annotations]
+ignore-fully-untyped = true
+
+[tool.ruff.flake8-unused-arguments]
+ignore-variadic-names = true
+
+[tool.ruff.isort]
+combine-as-imports = true
+
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
