--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,8 @@ tweepy = "^4"
 requests = "^2"
 beautifulsoup4 = "^4"
 lxml = "^4"
+praw = "^7"
 
-[tool.poetry.dev-dependencies]
-mypy = "^1"
-black = "^23"
 
 [tool.poetry.group.types.dependencies]
 types-requests = "^2.28.11.17"
@@ -22,6 +20,8 @@ types-beautifulsoup4 = "^4.12.0.3"
 types-lxml = "^2023.3.28"
 
 [tool.poetry.group.dev.dependencies]
+black = "^23"
+mypy = "^1"
 ruff = "^0.0.262"
 
 [tool.ruff]
