--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,8 @@ select = ['ALL']
 ignore = ['E501',
           'D', # ignore docs for now
           'D100', 'D101', 'D102', 'D103', # missing doc strings
-          'G004' # Logging statement uses f-string --> reenable
+          'G004', # Logging statement uses f-string --> reenable
+          'ERA001' # commented out code
           ]
 
 
